using .env for docker compose variables

--- a/packages/api/docker-compose.yml
+++ b/packages/api/docker-compose.yml
@@ -3,13 +3,15 @@ services:
     image: mysql:8.0
     container_name: taskmanager_mysql
     restart: always
+    env_file:
+      - .env
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: task_manager
-      MYSQL_USER: taskuser
-      MYSQL_PASSWORD: taskpassword
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:?err}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:?err}
+      MYSQL_USER: ${MYSQL_USER:?err}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD:?err}
     ports:
-      - "3306:3306"
+      - "${MYSQL_PORT}:3306"
     volumes:
       - mysql_data:/var/lib/mysql
 volumes:
