connected to DB using mysql2 connector via docker

--- a/packages/api/.env.example
+++ b/packages/api/.env.example
@@ -1,7 +1,11 @@
 # MySQL
+DB_HOST=
 MYSQL_ROOT_PASSWORD=
 MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_PORT=
 APP_PORT=
+SESSION_SECRET=
+#SHA256
+JWT_SECRET=
