--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "test": "jest"
   },
   "author": "Juan Roa",
   "license": "MIT",
@@ -19,5 +19,8 @@
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0",
     "sequelize": "^6.37.6"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0"
   }
 }
