[WIP] using test database for integration tests, fixing issues with jest connecting to the DB

--- a/packages/api/docker-compose.yml
+++ b/packages/api/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       MYSQL_DATABASE: ${MYSQL_DATABASE:?err}
       MYSQL_USER: ${MYSQL_USER:?err}
       MYSQL_PASSWORD: ${MYSQL_PASSWORD:?err}
+      MYSQL_CHARSET: utf8mb4
+      MYSQL_COLLATION: utf8mb4_unicode_ci
     ports:
       - "${MYSQL_PORT}:3306"
     volumes:
