--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "test": "jest"
+    "test": "jest",
+    "test-env": "NODE_ENV=test npm test -- --runInBand --detectOpenHandles"
   },
   "author": "Juan Roa",
   "license": "MIT",
