--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "test": "jest",
-    "test-env": "NODE_ENV=test npm test -- --runInBand --detectOpenHandles"
+    "test-env": "NODE_ENV=test npm test -- --runInBand --detectOpenHandles --testPathPattern=auth.test.js"
   },
   "author": "Juan Roa",
   "license": "MIT",
